examples/basic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: amd-wks-hello-basic
    app.kubernetes.io/name: amd-wks-hello
  name: amd-wks-hello-basic
  namespace: robert
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: amd-wks-hello-basic
      app.kubernetes.io/name: amd-wks-hello
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: amd-wks-hello-basic
        app.kubernetes.io/name: amd-wks-hello
    spec:
      containers:
      - name: amd-wks-hello
        image: robert396/amd-wks-hello:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: http
            protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: http
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 15
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 1m
            memory: 20Mi
